logs/eth_exercise/build.make.001.log
[35m[1mScanning dependencies of target eth_exercise_core[0m
[35m[1mScanning dependencies of target eth_exercise[0m
[ 50%] [32mBuilding CXX object CMakeFiles/eth_exercise.dir/src/eth_exercise_node.cpp.o[0m
[ 50%] [32mBuilding CXX object CMakeFiles/eth_exercise_core.dir/src/eth_exercise.cpp.o[0m
/home/weiminn/catkin_ws/src/eth_exercise/src/eth_exercise_node.cpp: In function ‘int main(int, char**)’:
/home/weiminn/catkin_ws/src/eth_exercise/src/eth_exercise_node.cpp:10:16: error: expected ‘;’ before ‘return’
   10 |     ros::spin()
      |                ^
      |                ;
   11 |     return 0
      |     ~~~~~~      
make[2]: *** [CMakeFiles/eth_exercise.dir/build.make:63: CMakeFiles/eth_exercise.dir/src/eth_exercise_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:167: CMakeFiles/eth_exercise.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 75%] [32m[1mLinking CXX shared library /home/weiminn/catkin_ws/devel/.private/eth_exercise/lib/libeth_exercise_core.so[0m
[ 75%] Built target eth_exercise_core
make: *** [Makefile:141: all] Error 2
